--- a/wiki/API.wiki
+++ b/wiki/API.wiki
@@ -1,7 +1,7 @@
 #labels Featured
-= Introduction =
+== Introduction ==
 
-Most G02.ME functionality is available to programmers through a JSON/Javascript API.  Most of the URL's that are supported by the user-interface have a JSON-equivalent request.
+G02.ME functionality is available to programmers through a JSON/Javascript API.  Most of the URL's that are supported by the user-interface have a JSON-equivalent request.
 
 All requests are of the form:
 
@@ -26,3 +26,8 @@ function MyCallback(obj)
 </script>
 <script src="http://g02.me/...?callback=MyCallback"></script>
 }}}
+
+== Methods ==
+
+|| URL || Example || Notes ||
+|| /N || [http://g02.me/G?callback=Test Example] || Retrieve information about a shorted URL, N ||
