--- a/wiki/API.wiki
+++ b/wiki/API.wiki
@@ -27,10 +27,30 @@ function MyCallback(obj)
 <script src="http://g02.me/...?callback=MyCallback"></script>
 }}}
 
+== Concepts ==
+
+G02.ME stored shorted URL's and collects analytics information about user interactions with those shortened URL's.  Each shortened URL is assigned an _id_ (which is encoded as a base-64 number using the digits, letters and the characters "-" and "_").
+
+Each URL has the following information that can be retrieved about it:
+
+* url: The _long_ URL
+* id: The base-645 identifier for the shortened URL
+* title: The page title
+* viewed: Total number of times the G02.ME URL has been accesssed/viewed
+* shared: Total number of times users have shared this URL (mapped the full URL to it's shortcut).
+* scores: An array of time-weighted scores based on the total activity surrounding the URL.
+* 
+
+=== Scores ===
+
+Each URL may have a collection of _comments_ associated with it, as well as
+
 == Methods ==
 
-|| URL || Description || Notes ||
-|| /N || Retrieve information about a shorted URL, N || 
+|| URL || Description ||
+|| /info/id || Retrieve information about a shortened URL id. ||
+|| /map/?url=...&title=... || Generate a shorted URL from a long one. ||
+|| /comment/?id=xxx
 
 == Examples ==
 
