--- a/wiki/API.wiki
+++ b/wiki/API.wiki
@@ -67,6 +67,8 @@ Each URL may have a collection of _comments_ associated with it, as well as
 == Examples ==
 
 http://g02.me/G?callback=Test
+
+Results:
 {{{
 Test({"status": "OK",
   "created": new Date("10/16/2008 15:35 GMT"),
@@ -82,6 +84,8 @@ Test({"status": "OK",
 }}}
 
 http://g02.me/map/?url=http://code.google.com/p/g02me/wiki/API&title=Edit%20API-g02me&callback=Test
+
+Results:
 {{{
 Test({"status": "OK",
   "created": new Date("10/16/2008 21:57 GMT"),
