--- a/wiki/AboutUs.wiki
+++ b/wiki/AboutUs.wiki
@@ -1,13 +1,3 @@
-#summary One-sentence summary of this page.
+G02.ME is 
 
-= Introduction =
-
-Add your content here.
-
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+<wiki:gadget url="http://www.ohloh.net/projects/g02me/widgets/project_basic_stats.xml" height="220" border="1" />
