--- a/wiki/AboutUs.wiki
+++ b/wiki/AboutUs.wiki
@@ -1,3 +1,3 @@
-G02.ME is 
+G02.ME was started as a Google Hack-a-Thon project in Seattle in 
 
 <wiki:gadget url="http://www.ohloh.net/projects/g02me/widgets/project_basic_stats.xml" height="220" border="1" />
