Edited wiki page through web user interface.

--- a/wiki/TermsOfService.wiki
+++ b/wiki/TermsOfService.wiki
@@ -1,4 +1,4 @@
-#summary Terms of Service for the [http://g02.me G02.ME] hosted web service.
+#summary Terms of Service for the G02.ME hosted web service.
 
 == Agreement ==
 
