Edited wiki page through web user interface.

--- a/wiki/TermsOfService.wiki
+++ b/wiki/TermsOfService.wiki
@@ -4,12 +4,13 @@
 
  * In order to use g02.me (the Service), you must agree to these Terms of Service.
  * You must be 13 years or older to use the Service.
+ * g02.me reserves the right to change this agreement without prior notice.
 
 == Account ==
 
  * You may use the Service anonymously.
  * If you do create an account (register), you must provide correct contact (email) information so we can get in touch with you about your use of the service.
- * You agree not to try to access the administrative features of the Service w/o authorization.
+ * You agree not to try to access the administrative features of the Service without authorization.
  * You agree not to attempt to impersonate or otherwise use the Service on behalf of another user without their prior knowledge and consent.
 
 == Privacy ==
