--- a/wiki/TermsOfService.wiki
+++ b/wiki/TermsOfService.wiki
@@ -2,15 +2,28 @@
 
 == Agreement ==
 
- * In order to use g02.me (the Service), you must agree to these Terms of Service.
- * You must be 13 years or older to use the Service.
- * g02.me reserves the right to change this agreement without prior notice.
+  # In order to use g02.me (the Service), you must agree to these Terms of Service.
+  # You must be 13 years or older to use the Service.
+  # g02.me reserves the right to change this agreement without prior notice.
 
 == Account ==
 
- * You may use the Service anonymously.
- * If you do create an account (register), you must provide correct contact (email) information so we can get in touch with you about your use of the service.
- * You agree not to try to access the administrative features of the Service without authorization.
- * You agree not to attempt to impersonate or otherwise use the Service on behalf of another user without their prior knowledge and consent.
+  # You may use the Service anonymously.
+  # If you do create an account (register), you must provide correct contact (email) information so we can get in touch with you about your use of the service.
+  # You agree not to try to access the administrative features of the Service without authorization.
+  # You agree not to attempt to impersonate or otherwise use the Service on behalf of another user without their prior knowledge and consent.
 
-== Privacy ==
+== Privacy Policy ==
+
+  # The [http://code.google.com/appengine/privacy.html Google App Engine Privacy Policy] is included by reference in this agreement.
+  # The Service will have access to your username and email address if you register with the Service.
+  # The Service will have access to all information provided by you to the service.
+
+== Fees ==
+
+  # The Service
+
+== Exclusion of Warranties ==
+
+  # The Service is provided without warranty or liability for losses which may be incurred by you in conjunction with your use of the Service.
+  # You agree that your use of the Service is at your sole risk and is provided to you "as is" and "as available".
