Edited wiki page through web user interface.

--- a/wiki/TermsOfService.wiki
+++ b/wiki/TermsOfService.wiki
@@ -22,8 +22,9 @@
 == Fees ==
 
   # The Service is provided to you without charge.
-  # The Service reserves the right offer some services on a paid-fee basis.
   # The Service reserves the right to change the fee and payment policy at any time.
+
+== Con
 
 == Exclusion of Warranties ==
 
