--- a/wiki/License.wiki
+++ b/wiki/License.wiki
@@ -1,4 +1,5 @@
 #labels Featured
+#subject Software License
 Copyright (c) 2008 Michael C. Koss
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
