Edited wiki page through web user interface.

--- a/wiki/TermsOfService.wiki
+++ b/wiki/TermsOfService.wiki
@@ -33,7 +33,11 @@
 
 == Proprietary Rights ==
 
-  # Your rights to use the software used in the Service are granted by the attached [License]
+  # Your rights to the software used in the Service are granted by this [License].
+
+== License from You ==
+
+  # By providing content to the Service, you give StartPad a worldwide, royalty-free, and non-exclusive license to reproduce, adapt, modify, translate, publish, publicly display and distribute such Content for the sole purpose of enabling StartPad to provide you with the Service in accordance with its privacy policy.
 
 == Exclusion of Warranties ==
 
