--- a/wiki/TermsOfService.wiki
+++ b/wiki/TermsOfService.wiki
@@ -16,9 +16,10 @@
 
 == Privacy Policy ==
 
-  # The [http://code.google.com/appengine/privacy.html Google App Engine Privacy Policy] is included by reference in this agreement.
+  # The [http://code.google.com/appengine/privacy.html Google App Engine Privacy Policy] and [http://www.google.com/privacypolicy.html Google Privacy Policy] is included by reference in this agreement.
   # !StartPad will have access to your username and email address if you register with the Service.
   # !StartPad will have access to all information provided by you to the service.
+  # When !StartPad collects email addresses, IP addresses, or personal passwords in conjuction with the use of the Service, it will not disclose this information with any 3rd party without your prior consent.
 
 == Fees ==
 
@@ -27,9 +28,10 @@
 
 == Content ==
 
-  # You understand that all content to which you may have access through use of the Service is the sole responsibility of the person from which that content originated.
-  # StartPad may, at it's sole discretion, remove any content from the Service, without prior notice.
-  # You agree StartPad has no responsibility or liability for the deletion or failure to store any content you provide to the Service.
+  # "Content" is defined as any explicit and implicit information provided to the Service.
+  # You understand that all Content to which you may have access through use of the Service is the sole responsibility of the person from which that Content originated.
+  # !StartPad may, at it's sole discretion, remove any Content from the Service, without prior notice.
+  # You agree !StartPad has no responsibility or liability for the deletion or failure to store any Content you provide to the Service.
 
 == Proprietary Rights ==
 
@@ -37,7 +39,7 @@
 
 == License from You ==
 
-  # By providing content to the Service, you give StartPad a worldwide, royalty-free, and non-exclusive license to reproduce, adapt, modify, translate, publish, publicly display and distribute such Content for the sole purpose of enabling StartPad to provide you with the Service in accordance with its privacy policy.
+  # By providing content to the Service, you give StartPad a worldwide, royalty-free, and non-exclusive license to reproduce, adapt, modify, translate, publish, publicly display and distribute such Content for the purpose of enabling StartPad to provide you with the Service in accordance with its privacy policy.
 
 == Exclusion of Warranties ==
 
